--- a/AKIGangstaNews/Source/UI/AKIViewControllers/AKILoginViewController/AKILoginViewController.xib
+++ b/AKIGangstaNews/Source/UI/AKIViewControllers/AKILoginViewController/AKILoginViewController.xib
@@ -33,7 +33,7 @@
                                     <rect key="frame" x="31" y="433" width="317" height="30"/>
                                     <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="30" id="TMx-Ku-E2e"/>
+                                        <constraint firstAttribute="height" constant="30" id="GYV-vB-h8m"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                     <textInputTraits key="textInputTraits"/>
@@ -45,7 +45,7 @@
                                     <rect key="frame" x="31" y="488" width="317" height="30"/>
                                     <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="30" id="Fbn-em-oii"/>
+                                        <constraint firstAttribute="height" constant="30" id="aDI-Rj-Cps"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                     <textInputTraits key="textInputTraits" keyboardAppearance="light" secureTextEntry="YES"/>
@@ -56,7 +56,7 @@
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S3i-dM-R7H">
                                     <rect key="frame" x="82" y="629" width="206" height="30"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="30" id="n2H-V9-cd8"/>
+                                        <constraint firstAttribute="height" constant="30" id="AMY-EN-bf3"/>
                                     </constraints>
                                     <state key="normal" title="Forgot password?"/>
                                     <connections>
@@ -78,8 +78,8 @@
                                     <rect key="frame" x="31" y="564" width="150" height="30"/>
                                     <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="30" id="PN7-Dx-x7x"/>
-                                        <constraint firstAttribute="width" constant="150" id="crq-Uu-Lfg"/>
+                                        <constraint firstAttribute="height" constant="30" id="i6T-pb-yB4"/>
+                                        <constraint firstAttribute="width" constant="150" id="rXy-9y-C8t"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                     <state key="normal" title="Log In">
@@ -97,26 +97,25 @@
                             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <gestureRecognizers/>
                             <constraints>
-                                <constraint firstItem="S3i-dM-R7H" firstAttribute="leading" secondItem="G86-5b-fOy" secondAttribute="leading" constant="82" id="0y3-2N-ViI"/>
-                                <constraint firstItem="lW1-H6-DLJ" firstAttribute="leading" secondItem="G86-5b-fOy" secondAttribute="leading" constant="31" id="2Cn-ia-LAv"/>
-                                <constraint firstItem="lW1-H6-DLJ" firstAttribute="top" secondItem="G86-5b-fOy" secondAttribute="top" id="8Qo-g0-pgq"/>
-                                <constraint firstItem="S3i-dM-R7H" firstAttribute="bottom" secondItem="G86-5b-fOy" secondAttribute="bottomMargin" id="9P9-rH-Pu0"/>
-                                <constraint firstItem="Vo6-sr-yey" firstAttribute="trailing" secondItem="LRb-TU-BYV" secondAttribute="trailing" id="BAL-Aq-5Jn"/>
-                                <constraint firstItem="eF6-Nd-aef" firstAttribute="leading" secondItem="Vo6-sr-yey" secondAttribute="leading" id="Bdl-Yy-nqn"/>
-                                <constraint firstAttribute="trailing" secondItem="S3i-dM-R7H" secondAttribute="trailing" constant="87" id="FKb-UU-L0f"/>
-                                <constraint firstItem="LRb-TU-BYV" firstAttribute="leading" secondItem="jN1-Ld-pyh" secondAttribute="trailing" constant="17" id="FuV-uh-0So"/>
-                                <constraint firstItem="eF6-Nd-aef" firstAttribute="top" secondItem="lW1-H6-DLJ" secondAttribute="bottom" constant="27" id="Ou6-NS-1nk"/>
-                                <constraint firstItem="jN1-Ld-pyh" firstAttribute="top" secondItem="LRb-TU-BYV" secondAttribute="top" id="UNg-28-ygV"/>
-                                <constraint firstItem="jN1-Ld-pyh" firstAttribute="bottom" secondItem="LRb-TU-BYV" secondAttribute="bottom" id="Wwe-78-WKb"/>
-                                <constraint firstItem="lW1-H6-DLJ" firstAttribute="trailing" secondItem="eF6-Nd-aef" secondAttribute="trailing" id="cmW-LO-eVY"/>
-                                <constraint firstItem="Vo6-sr-yey" firstAttribute="top" secondItem="eF6-Nd-aef" secondAttribute="bottom" constant="25" id="gIl-ns-8Nb"/>
-                                <constraint firstItem="S3i-dM-R7H" firstAttribute="top" secondItem="jN1-Ld-pyh" secondAttribute="bottom" constant="35" id="kFq-70-w8e"/>
-                                <constraint firstItem="jN1-Ld-pyh" firstAttribute="width" secondItem="LRb-TU-BYV" secondAttribute="width" id="pk8-Tq-0Oc"/>
-                                <constraint firstAttribute="trailing" secondItem="lW1-H6-DLJ" secondAttribute="trailing" constant="27" id="qvN-Qq-tii"/>
-                                <constraint firstItem="Vo6-sr-yey" firstAttribute="leading" secondItem="jN1-Ld-pyh" secondAttribute="leading" id="tRO-gX-e3s"/>
-                                <constraint firstItem="jN1-Ld-pyh" firstAttribute="top" secondItem="Vo6-sr-yey" secondAttribute="bottom" constant="46" id="thD-gd-PWm"/>
-                                <constraint firstItem="eF6-Nd-aef" firstAttribute="trailing" secondItem="Vo6-sr-yey" secondAttribute="trailing" id="uqw-jc-3To"/>
-                                <constraint firstItem="lW1-H6-DLJ" firstAttribute="leading" secondItem="eF6-Nd-aef" secondAttribute="leading" id="xgQ-hu-JxU"/>
+                                <constraint firstItem="lW1-H6-DLJ" firstAttribute="leading" secondItem="G86-5b-fOy" secondAttribute="leading" constant="31" id="08X-X4-F8E"/>
+                                <constraint firstAttribute="trailing" secondItem="S3i-dM-R7H" secondAttribute="trailing" constant="87" id="4O5-f4-spF"/>
+                                <constraint firstItem="S3i-dM-R7H" firstAttribute="top" secondItem="jN1-Ld-pyh" secondAttribute="bottom" constant="35" id="4s2-tX-6qx"/>
+                                <constraint firstItem="Vo6-sr-yey" firstAttribute="top" secondItem="eF6-Nd-aef" secondAttribute="bottom" constant="25" id="8C5-i6-BZq"/>
+                                <constraint firstItem="Vo6-sr-yey" firstAttribute="trailing" secondItem="LRb-TU-BYV" secondAttribute="trailing" id="Dfa-sC-GVp"/>
+                                <constraint firstItem="jN1-Ld-pyh" firstAttribute="top" secondItem="LRb-TU-BYV" secondAttribute="top" id="GCv-4T-odC"/>
+                                <constraint firstItem="S3i-dM-R7H" firstAttribute="leading" secondItem="G86-5b-fOy" secondAttribute="leading" constant="82" id="Neo-G1-u12"/>
+                                <constraint firstItem="lW1-H6-DLJ" firstAttribute="top" secondItem="G86-5b-fOy" secondAttribute="top" id="P9l-qM-Dgi"/>
+                                <constraint firstItem="S3i-dM-R7H" firstAttribute="bottom" secondItem="G86-5b-fOy" secondAttribute="bottomMargin" id="Xob-o3-0qt"/>
+                                <constraint firstItem="eF6-Nd-aef" firstAttribute="top" secondItem="lW1-H6-DLJ" secondAttribute="bottom" constant="27" id="cZu-7t-QyO"/>
+                                <constraint firstItem="jN1-Ld-pyh" firstAttribute="bottom" secondItem="LRb-TU-BYV" secondAttribute="bottom" id="gAx-di-FMS"/>
+                                <constraint firstItem="eF6-Nd-aef" firstAttribute="leading" secondItem="Vo6-sr-yey" secondAttribute="leading" id="gTf-q6-xrc"/>
+                                <constraint firstItem="jN1-Ld-pyh" firstAttribute="top" secondItem="Vo6-sr-yey" secondAttribute="bottom" constant="46" id="j3t-mz-DwZ"/>
+                                <constraint firstItem="lW1-H6-DLJ" firstAttribute="trailing" secondItem="eF6-Nd-aef" secondAttribute="trailing" id="jYS-On-czR"/>
+                                <constraint firstItem="LRb-TU-BYV" firstAttribute="leading" secondItem="jN1-Ld-pyh" secondAttribute="trailing" constant="17" id="m8J-p6-QRe"/>
+                                <constraint firstItem="lW1-H6-DLJ" firstAttribute="leading" secondItem="eF6-Nd-aef" secondAttribute="leading" id="ouN-kx-LMv"/>
+                                <constraint firstItem="eF6-Nd-aef" firstAttribute="trailing" secondItem="Vo6-sr-yey" secondAttribute="trailing" id="w2b-pi-FXo"/>
+                                <constraint firstAttribute="trailing" secondItem="lW1-H6-DLJ" secondAttribute="trailing" constant="27" id="zMe-lL-Mba"/>
+                                <constraint firstItem="Vo6-sr-yey" firstAttribute="leading" secondItem="jN1-Ld-pyh" secondAttribute="leading" id="zPD-pc-BwM"/>
                             </constraints>
                             <connections>
                                 <outletCollection property="gestureRecognizers" destination="cXV-h7-cCj" appends="YES" id="WLY-A2-F7F"/>
@@ -125,21 +124,21 @@
                     </subviews>
                     <gestureRecognizers/>
                     <constraints>
-                        <constraint firstAttribute="trailing" secondItem="G86-5b-fOy" secondAttribute="trailing" id="0gr-a9-lwW"/>
-                        <constraint firstAttribute="bottom" secondItem="G86-5b-fOy" secondAttribute="bottom" id="Fay-pk-Nvr"/>
-                        <constraint firstItem="G86-5b-fOy" firstAttribute="top" secondItem="jcA-qr-bU4" secondAttribute="top" id="LAc-8N-tBE"/>
-                        <constraint firstItem="G86-5b-fOy" firstAttribute="centerY" secondItem="jcA-qr-bU4" secondAttribute="centerY" id="gzf-wX-RQ7"/>
-                        <constraint firstItem="G86-5b-fOy" firstAttribute="leading" secondItem="jcA-qr-bU4" secondAttribute="leading" id="hXU-Po-fZk"/>
-                        <constraint firstItem="G86-5b-fOy" firstAttribute="centerX" secondItem="jcA-qr-bU4" secondAttribute="centerX" id="ljm-Bu-wpi"/>
+                        <constraint firstItem="G86-5b-fOy" firstAttribute="centerY" secondItem="jcA-qr-bU4" secondAttribute="centerY" id="NVp-nO-Wzp"/>
+                        <constraint firstAttribute="trailing" secondItem="G86-5b-fOy" secondAttribute="trailing" id="gXR-mh-drl"/>
+                        <constraint firstAttribute="bottom" secondItem="G86-5b-fOy" secondAttribute="bottom" id="lJV-91-mx5"/>
+                        <constraint firstItem="G86-5b-fOy" firstAttribute="centerX" secondItem="jcA-qr-bU4" secondAttribute="centerX" id="naJ-aE-qgh"/>
+                        <constraint firstItem="G86-5b-fOy" firstAttribute="top" secondItem="jcA-qr-bU4" secondAttribute="top" id="rZ7-Ew-sU4"/>
+                        <constraint firstItem="G86-5b-fOy" firstAttribute="leading" secondItem="jcA-qr-bU4" secondAttribute="leading" id="sxZ-vj-cG9"/>
                     </constraints>
                 </scrollView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="jcA-qr-bU4" secondAttribute="bottom" id="XP1-jZ-Tpf"/>
-                <constraint firstItem="jcA-qr-bU4" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="koY-fG-POQ"/>
-                <constraint firstItem="jcA-qr-bU4" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="mky-kD-Mjg"/>
-                <constraint firstAttribute="trailing" secondItem="jcA-qr-bU4" secondAttribute="trailing" id="yef-n3-xDM"/>
+                <constraint firstItem="jcA-qr-bU4" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="1oh-SF-ebI"/>
+                <constraint firstItem="jcA-qr-bU4" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="4EY-EU-Nmr"/>
+                <constraint firstAttribute="trailing" secondItem="jcA-qr-bU4" secondAttribute="trailing" id="Pz9-3I-DF5"/>
+                <constraint firstAttribute="bottom" secondItem="jcA-qr-bU4" secondAttribute="bottom" id="TOj-qI-6Vr"/>
             </constraints>
             <connections>
                 <outlet property="authorizationButton" destination="LRb-TU-BYV" id="O1v-nd-48N"/>
