--- a/AKIGangstaNews/Source/UI/AKIViewControllers/AKIDetailNewsViewController/AKIDetailNewsViewController.xib
+++ b/AKIGangstaNews/Source/UI/AKIViewControllers/AKIDetailNewsViewController/AKIDetailNewsViewController.xib
@@ -25,48 +25,45 @@
                             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             <subviews>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="HoQ-ci-0t3">
-                                    <rect key="frame" x="22" y="0.0" width="331" height="321"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="321" id="BB7-1I-fYu"/>
-                                    </constraints>
+                                    <rect key="frame" x="22" y="0.0" width="331" height="350"/>
                                 </imageView>
                             </subviews>
                             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
-                                <constraint firstItem="HoQ-ci-0t3" firstAttribute="top" secondItem="xXx-ha-BMO" secondAttribute="top" id="7kM-gM-5JE"/>
-                                <constraint firstItem="HoQ-ci-0t3" firstAttribute="centerX" secondItem="xXx-ha-BMO" secondAttribute="centerX" id="oIa-yD-dc2"/>
-                                <constraint firstItem="HoQ-ci-0t3" firstAttribute="leading" secondItem="xXx-ha-BMO" secondAttribute="leading" constant="22" id="xIb-Dn-tNi"/>
+                                <constraint firstItem="HoQ-ci-0t3" firstAttribute="top" secondItem="xXx-ha-BMO" secondAttribute="top" id="SCg-cy-qfq"/>
+                                <constraint firstItem="HoQ-ci-0t3" firstAttribute="leading" secondItem="xXx-ha-BMO" secondAttribute="leading" constant="22" id="eMC-bT-Ocd"/>
+                                <constraint firstItem="HoQ-ci-0t3" firstAttribute="centerX" secondItem="xXx-ha-BMO" secondAttribute="centerX" id="yn9-ac-FDM"/>
                             </constraints>
                         </view>
                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aCU-Wg-J2C">
-                            <rect key="frame" x="22" y="322" width="333" height="28"/>
+                            <rect key="frame" x="22" y="351" width="329" height="316"/>
                             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="28" id="u6L-OI-x2i"/>
+                                <constraint firstAttribute="height" constant="316" id="47f-3L-9ow"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         </textView>
                     </subviews>
                     <constraints>
-                        <constraint firstItem="aCU-Wg-J2C" firstAttribute="leading" secondItem="JnU-7I-HKe" secondAttribute="leading" constant="22" id="JyS-iN-67F"/>
-                        <constraint firstItem="xXx-ha-BMO" firstAttribute="leading" secondItem="JnU-7I-HKe" secondAttribute="leading" id="RcL-cK-teH"/>
-                        <constraint firstAttribute="bottom" secondItem="xXx-ha-BMO" secondAttribute="bottom" id="Rrf-GN-G7V"/>
-                        <constraint firstAttribute="trailing" secondItem="aCU-Wg-J2C" secondAttribute="trailing" constant="20" id="T6g-iE-XVv"/>
-                        <constraint firstItem="xXx-ha-BMO" firstAttribute="centerY" secondItem="JnU-7I-HKe" secondAttribute="centerY" id="VOy-Rs-AKw"/>
-                        <constraint firstItem="xXx-ha-BMO" firstAttribute="centerX" secondItem="JnU-7I-HKe" secondAttribute="centerX" id="bVR-ro-9XS"/>
-                        <constraint firstAttribute="trailing" secondItem="xXx-ha-BMO" secondAttribute="trailing" id="eQU-rW-iI0"/>
-                        <constraint firstItem="xXx-ha-BMO" firstAttribute="top" secondItem="JnU-7I-HKe" secondAttribute="top" id="qu5-40-SK5"/>
-                        <constraint firstItem="aCU-Wg-J2C" firstAttribute="top" secondItem="JnU-7I-HKe" secondAttribute="top" constant="322" id="wIw-3N-MJQ"/>
+                        <constraint firstItem="xXx-ha-BMO" firstAttribute="top" secondItem="JnU-7I-HKe" secondAttribute="top" id="7dG-xA-8gf"/>
+                        <constraint firstItem="xXx-ha-BMO" firstAttribute="centerY" secondItem="JnU-7I-HKe" secondAttribute="centerY" id="AYb-sB-F2a"/>
+                        <constraint firstAttribute="bottom" secondItem="xXx-ha-BMO" secondAttribute="bottom" id="Aup-VD-iD2"/>
+                        <constraint firstItem="aCU-Wg-J2C" firstAttribute="leading" secondItem="JnU-7I-HKe" secondAttribute="leading" constant="22" id="DFg-G9-7eP"/>
+                        <constraint firstItem="xXx-ha-BMO" firstAttribute="leading" secondItem="JnU-7I-HKe" secondAttribute="leading" id="ETt-4t-McE"/>
+                        <constraint firstItem="xXx-ha-BMO" firstAttribute="centerX" secondItem="JnU-7I-HKe" secondAttribute="centerX" id="Vtx-Nn-fz6"/>
+                        <constraint firstAttribute="trailing" secondItem="xXx-ha-BMO" secondAttribute="trailing" id="eBG-p8-8km"/>
+                        <constraint firstItem="xXx-ha-BMO" firstAttribute="bottom" secondItem="aCU-Wg-J2C" secondAttribute="bottom" id="pBc-e3-h70"/>
+                        <constraint firstAttribute="trailing" secondItem="aCU-Wg-J2C" secondAttribute="trailing" constant="24" id="tba-2V-q30"/>
                     </constraints>
                 </scrollView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="JnU-7I-HKe" secondAttribute="bottom" id="1TJ-EB-Gll"/>
-                <constraint firstItem="JnU-7I-HKe" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="GKQ-Wj-WkH"/>
-                <constraint firstItem="JnU-7I-HKe" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="bvf-pT-1Wh"/>
-                <constraint firstAttribute="trailing" secondItem="JnU-7I-HKe" secondAttribute="trailing" id="hDL-DO-Shj"/>
+                <constraint firstAttribute="bottom" secondItem="JnU-7I-HKe" secondAttribute="bottom" id="GIb-1D-6ol"/>
+                <constraint firstItem="JnU-7I-HKe" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="PaQ-rd-Ptf"/>
+                <constraint firstAttribute="trailing" secondItem="JnU-7I-HKe" secondAttribute="trailing" id="U3i-E2-iel"/>
+                <constraint firstItem="JnU-7I-HKe" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="pmR-tB-564"/>
             </constraints>
             <connections>
                 <outlet property="contentField" destination="aCU-Wg-J2C" id="F1T-Ag-mjW"/>
