--- a/AKIGangstaNews/Source/UI/AKIViewControllers/AKINewsViewController/AKINewsViewCell/AKINewsViewCell.xib
+++ b/AKIGangstaNews/Source/UI/AKIViewControllers/AKINewsViewController/AKINewsViewCell/AKINewsViewCell.xib
@@ -11,17 +11,17 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AKINewsViewCell" customModule="AKIGangstaNews" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="50" id="KGk-i7-Jjw" customClass="AKINewsViewCell" customModule="AKIGangstaNews" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="65" id="KGk-i7-Jjw" customClass="AKINewsViewCell" customModule="AKIGangstaNews" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="FxR-k5-EXO">
-                        <rect key="frame" x="74" y="-3" width="246" height="46"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="justified" lineBreakMode="wordWrap" numberOfLines="3" baselineAdjustment="alignBaselines" minimumScaleFactor="0.40000000000000002" translatesAutoresizingMaskIntoConstraints="NO" id="FxR-k5-EXO">
+                        <rect key="frame" x="74" y="-3" width="238" height="46"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="246" id="EUP-Md-H2z"/>
+                            <constraint firstAttribute="width" constant="238" id="qeQ-DN-6T8"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -33,13 +33,13 @@
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="FxR-k5-EXO" firstAttribute="leading" secondItem="AFn-tZ-a0L" secondAttribute="trailing" constant="8" symbolic="YES" id="IjP-bO-h5y"/>
-                    <constraint firstItem="AFn-tZ-a0L" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Kzt-Nj-cN5"/>
-                    <constraint firstAttribute="bottom" secondItem="FxR-k5-EXO" secondAttribute="bottom" id="dmF-67-mCN"/>
-                    <constraint firstItem="AFn-tZ-a0L" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="i8c-yt-s55"/>
-                    <constraint firstAttribute="trailing" secondItem="FxR-k5-EXO" secondAttribute="trailing" id="ojg-UB-37C"/>
-                    <constraint firstItem="FxR-k5-EXO" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-11" id="tZF-of-LbI"/>
-                    <constraint firstItem="AFn-tZ-a0L" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="uo4-42-mSl"/>
+                    <constraint firstItem="AFn-tZ-a0L" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="0zP-dC-mkd"/>
+                    <constraint firstItem="FxR-k5-EXO" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="DpY-MF-zHI"/>
+                    <constraint firstItem="AFn-tZ-a0L" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="LvK-3c-mTd"/>
+                    <constraint firstItem="FxR-k5-EXO" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-11" id="Rf1-Sl-6JY"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="FxR-k5-EXO" secondAttribute="bottom" constant="-7.5" id="a5e-MM-bRN"/>
+                    <constraint firstItem="AFn-tZ-a0L" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="g3T-I8-rsH"/>
+                    <constraint firstItem="FxR-k5-EXO" firstAttribute="leading" secondItem="AFn-tZ-a0L" secondAttribute="trailing" constant="8" symbolic="YES" id="oFx-N4-oB1"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
